[build-system]
requires = [
    "setuptools>=61.0",
    "requests",
    "websocket-client>0.33.0",
    "gitpython",
    "flask-httpauth",
    "flask-sqlalchemy",
    "flask-admin",
    "flask-bootstrap",
    "flask-wtf",
    "flask-cors",
    "flask",
    "pymysql",
    "tabulate",
    "py-radix",
    "jsonschema",
    "graphviz",
    "ipaddress",
    "deepdiff"
]
build-backend = "setuptools.build_meta"

[project]
name = "acitoolkit"
version = "0.41"
authors = [
  { name="Cisco Systems, Inc.", email="acitoolkit@external.cisco.com" },
]
description = "Toolkit for Cisco ACI Fabrics"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/datacenter/acitoolkit"
"Bug Tracker" = "https://github.com/datacenter/acitoolkit/issues"